# gameOfLife

./: CMakeLists.txt  build.sh  run.sh  test.sh
include/: cell.hpp
src/: cell.cpp  main.cpp  tests.cpp
